outfile
In file included from /usr/include/x86_64-linux-gnu/c++/7/bits/c++allocator.h:33:0,
                 from /usr/include/c++/7/bits/allocator.h:46,
                 from /usr/include/c++/7/string:41,
                 from /usr/include/c++/7/bits/locale_classes.h:40,
                 from /usr/include/c++/7/bits/ios_base.h:41,
                 from /usr/include/c++/7/ios:42,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /home/workspace/CppND-Route-Planning-Project/src/route_planner.h:4,
                 from /home/workspace/CppND-Route-Planning-Project/src/route_planner.cpp:1:
/usr/include/c++/7/ext/new_allocator.h: In instantiation of 'void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = RouteModel::Node; _Args = {RouteModel::Node*&}; _Tp = RouteModel::Node]':
/usr/include/c++/7/bits/alloc_traits.h:475:4:   required from 'static void std::allocator_traits<std::allocator<_CharT> >::construct(std::allocator_traits<std::allocator<_CharT> >::allocator_type&, _Up*, _Args&& ...) [with _Up = RouteModel::Node; _Args = {RouteModel::Node*&}; _Tp = RouteModel::Node; std::allocator_traits<std::allocator<_CharT> >::allocator_type = std::allocator<RouteModel::Node>]'
/usr/include/c++/7/bits/vector.tcc:100:30:   required from 'std::vector<_Tp, _Alloc>::reference std::vector<_Tp, _Alloc>::emplace_back(_Args&& ...) [with _Args = {RouteModel::Node*&}; _Tp = RouteModel::Node; _Alloc = std::allocator<RouteModel::Node>; std::vector<_Tp, _Alloc>::reference = RouteModel::Node&]'
/home/workspace/CppND-Route-Planning-Project/src/route_planner.cpp:82:36:   required from here
/usr/include/c++/7/ext/new_allocator.h:136:4: error: no matching function for call to 'RouteModel::Node::Node(RouteModel::Node*&)'
  { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/workspace/CppND-Route-Planning-Project/src/route_planner.h:7:0,
                 from /home/workspace/CppND-Route-Planning-Project/src/route_planner.cpp:1:
/home/workspace/CppND-Route-Planning-Project/src/route_model.h:27:9: note: candidate: RouteModel::Node::Node(int, RouteModel*, Model::Node)
         Node(int idx, RouteModel * search_model, Model::Node node) : Model::Node(node), parent_model(search_model), index(idx) {}
         ^~~~
/home/workspace/CppND-Route-Planning-Project/src/route_model.h:27:9: note:   candidate expects 3 arguments, 1 provided
/home/workspace/CppND-Route-Planning-Project/src/route_model.h:26:9: note: candidate: RouteModel::Node::Node()
         Node(){}
         ^~~~
/home/workspace/CppND-Route-Planning-Project/src/route_model.h:26:9: note:   candidate expects 0 arguments, 1 provided
/home/workspace/CppND-Route-Planning-Project/src/route_model.h:13:11: note: candidate: RouteModel::Node::Node(const RouteModel::Node&)
     class Node : public Model::Node {
           ^~~~
/home/workspace/CppND-Route-Planning-Project/src/route_model.h:13:11: note:   no known conversion for argument 1 from 'RouteModel::Node*' to 'const RouteModel::Node&'
/home/workspace/CppND-Route-Planning-Project/src/route_model.h:13:11: note: candidate: RouteModel::Node::Node(RouteModel::Node&&)
/home/workspace/CppND-Route-Planning-Project/src/route_model.h:13:11: note:   no known conversion for argument 1 from 'RouteModel::Node*' to 'RouteModel::Node&&'
make[2]: *** [CMakeFiles/route_planner.dir/src/route_planner.cpp.o] Error 1
make[1]: *** [CMakeFiles/route_planner.dir/all] Error 2
make: *** [all] Error 2
